# ToDoApp

./: .flaskenv  Dockerfile  README.md  alembic.ini  application.py  create_all_tables.py  db.py  docker-compose.yml  pyproject.toml  settings.py
app/: routes.py
app/tasks/: endpoints.py  models.py
app/templates/: 500.html  base.html  index.html
app/user/: endpoints.py  models.py
app/user/templates/: login.html  register.html
app/utility/: form.py  request_response.py  validate.py
migrations/: env.py
static/css-main/: MainForms.css  MediaQueryForms.css  alert.css  edit.css  index-Modal.css  index-helper.css  index.css  thistry.css  try.css
tests/: conftest.py  test_zara.py
