[tool.poetry]
name = "salesbag"
version = "0.1.0"
description = ""
authors = ["Himanshu Kumar <kumarhimanshu250798@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.9.3"
databases = "^0.6.1"
asyncpg = "^0.26.0"
alembic = "^1.8.1"
anyio = "^3.6.1"
pytest = "^7.1.3"
trio = "^0.21.0"
Flask = "^2.2.2"
Flask-Cors = "^3.0.10"
flask-sqlalchemy = "^3.0.0"
Flask-Session = "^0.4.0"
Flask-WTF = "^1.0.1"
python-dotenv = "^0.21.0"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
